19_pod-with-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-writer
  labels:
    label-key1: label-value1
    label-key2: label-value2
    label-key3: label-value3
spec:
  volumes: #DISINI
    - name: html #(#VIN43)
      emptyDir: {} #Banyak pilihan, emptyDir ga guna, dibuat kosong saat pembuatan pod. || UNTUK BELAJAR SAJA
  containers:
    - name: go-writer
      image: vincen320/go-writer
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /app/html #lokasi mounting kemana yang didalam container, dari spec.volume ke sini.
          name: html #sama dengan volume.name (VIN#43)
