1_buat-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx #NAMABEBAS
spec:
  containers:
    - name: nginx
      image: nginx:1.23.1-alpine
      ports:
        - containerPort: 80 #Harus tau si Image running di PORT berapa
