21_environment_variable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-writer
  labels:
    label-key1: label-value1
    label-key2: label-value2
    label-key3: label-value3
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: go-writer
      image: vincen320/go-writer
      volumeMounts:
        - mountPath: /app/folder-from-env
          name: html
      # ports:
      #   - containerPort: 80
      env: #ENVIRONMEN VARIABLE DARI CONTAINER
        - name: HTML_LOCATION
          value: folder-from-env # KARENA DI GO-WRITER WORKDIR DockerFilenya SUDAH DI /app
