28_persistent-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-writer
  labels:
    name: go-writer
spec:
  volumes:
    - name: html
      persistentVolumeClaim: #BEDA DSINI
        claimName: go-writer-volume-claim #pakai yang claim
  containers:
    - name: go-writer
      image: vincen320/go-writer
      volumeMounts:
        - mountPath: /app/html
          name: html
