2_pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-label
  labels:
    team: finance
    version: 1.3.5
    environment: production
spec:
  containers:
    - name: nginx
      image: nginx:1.23.1-alpine
      ports:
        - containerPort: 80 #Harus tau si Image running di PORT berapa
