3_pod-with-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-annotation
  labels:
    team: product
    version: 1.0.1
    environment: development
  annotations:
    description: Ini adalah aplikasi yang dibuat oleh tim product
    apapun: Apapun itu...
spec:
  containers:
    - name: nginx
      image: nginx:1.23.1-alpine
      ports:
        - containerPort: 80 #Harus tau si Image running di PORT berapa
