5_pod-with-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-probe
spec:
  containers:
    - name: nginx
      image: nginx:1.23.1-alpine
      ports:
        - containerPort: 80 #Harus tau si Image running di PORT berapa
      livenessProbe:
        httpGet: #atau tcpSocket atau execCommand
          path: / #masukkan url yang ada di container tsb yang bisa di hit (mksdnya biasanya kl bkin webservice kita bikin endpoint utk cek health, bisa kesana juga)
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
      # readlinessProbe:
      #   httpGet:
      #     path: /
      #     port: 80
      #   initialDelaySeconds: 0
      #   periodSeconds: 10
      #   timeoutSeconds: 1
      #   successThreshold: 1
      #   failureThreshold: 3
      # startupProbe:
      #   httpGet:
      #     path: /
      #     port: 80
      #   initialDelaySeconds: 0
      #   periodSeconds: 10
      #   timeoutSeconds: 1
      #   successThreshold: 1
      #   failureThreshold: 3
