9_daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon-nginx
  labels:
    label-key1: label-value1
  annotations:
    annotation-key1: annotation-value1
spec:
  selector:
    matchLabels:
      name: daemon-nginx #SPTNYA IN HRS SAMA= YA
    # matchExpressions:
    #   - key: label-key1
    #     operator: In
    #     values:
    #       - label-value1
  template:
    metadata:
      name: daemon-nginx
      labels:
        name: daemon-nginx #SPTNYA IN HRS SAMA= YA
    spec:
      containers:
        - name: nginx
          image: nginx:1.23.1-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: / #masukkan url yang ada di container tsb yang bisa di hit (mksdnya biasanya kl bkin webservice kita bikin endpoint utk cek health, bisa kesana juga)
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
