14_external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    label-key1: label-value1
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: vincen320/nginx-curl
#EXTERNAL SERVICE: SI SERVICE YANG TEMBAK/HIT KELUAR
