23_secret.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-env-service
spec:
  type: NodePort
  selector:
    name: go-env # JANGAN LUPA INI HARUS SAMA DENGAN LABEL POD
  ports:
    - port: 3000 #PORT buat servicenya
      targetPort: 3000 #PORT UNTUK AKSES PODNYA, jadi akses ke servicenya yaitu 8080 tapi nanti si service akan ngeakses ke port 80 di pod yang ditujunya(contohnya di nginx jalan di port 80 jadi diarahkan kesana)
      nodePort: 30001 #jangan lupa tambahin ini, port yang diekspos oleh node(dalam hal ini minikube), node bisa berupa vm
#catatan targetPort lanjutan diatas: Ingat karena service seperti gerbang/gateway, jadi si service harus ngeakses suatu POD
