31.1_horizontal-pod-autoscaler.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-service
spec:
  type: NodePort
  selector:
    name: go-web
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
