17.1_expose-service-with-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx #HARUS SAMA DENGAN PODnya
  ports:
    - port: 80 #PORT buat servicenya
      targetPort: 80 #PORT UNTUK AKSES PODNYA, jadi akses ke servicenya yaitu 8080 tapi nanti si service akan ngeakses ke port 80 di pod yang ditujunya(contohnya di nginx jalan di port 80 jadi diarahkan kesana)
#catatan targetPort lanjutan diatas: Ingat karena service seperti gerbang/gateway, jadi si service harus ngeakses suatu POD
#BERARTI INI CLUSTERIP KARENA TYPENYA TIDAK DITENTUKAN, karena yang diexpose nanti ada si ingressnya bukan si service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules: # YANG PENTING DISINI
    - host: nginx.vincen.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          # - path: /service2
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: nginx-service2
          #       port:
          #         number: 80
