17_expose-with-ingress.yaml
apiVersion: networking.k8s.io/v1 #V1
kind: Ingress
metadata:
  name: ingress-name
  labels:
    label-key1: label-value1
spec:
  rules: #YANG PENTING INI BRO
    - host: sub.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
#UDAH BERUBAH STRUKTURNYA
#https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
